# temporal-tryouts

./: README.md  pyproject.toml
notebooks/: td-corrected.ipynb  time-dependent-tests.ipynb
