[project]
name = "temporal-tryouts"
version = "0.1.0"
description = ""
authors = [
    {name = "Roberto Goelzer",email = "roberto.goelzer@epfl.ch"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "choix (>=0.4.1,<0.5.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
